--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>ENHYPENUNIVERSE</header>
 
-    <section class="chamada"
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>EPISODE 2 PART 2</h1>
             <p>#endrama</p>
